create an autocomplete dropdown style and some temp js so it partially functions in the styleguide

--- a/docroot/themes/custom/tower_health/tower_health.libraries.yml
+++ b/docroot/themes/custom/tower_health/tower_health.libraries.yml
@@ -15,6 +15,10 @@ main-menu:
 site-header:
   js:
     dist/03-organisms/site/site-header/site-header.js: {}
+    
+autocomplete:
+  js:
+    dist/02-molecules/autocomplete-dropdown/autocomplete.js: {}
 
 sprite:
   js:
