swap out navigation items

--- a/docroot/themes/custom/tower_health/components/_data/footer.yml
+++ b/docroot/themes/custom/tower_health/components/_data/footer.yml
@@ -25,24 +25,24 @@ footer_details:
     href: "#"
 footer_legal: "Copyright 2019 Tower Health. All rights reserved."
 footer_items:
-  - title: "Visitors & Caregivers"
+  - title: "Patients & Visitors"
     url: "/"
     below:
       - title: "Visiting a Patient"
         url: "/"
       - title: "Language Services"
         url: "/"
-      - title: "Caregiver Support"
+      - title: "What to Expect"
         url: "/"
-      - title: "Support Groups"
+      - title: "Pay a Bill"
         url: "/"
-      - title: "Homecare"
+      - title: "Price Estimator"
+        url: "/"
+      - title: "Financial Assistance"
         url: "/"
   - title: "Health & Wellness"
     url: "/"
     below:
-      - title: "Healthy Living"
-        url: "/"
       - title: "Classes & Events"
         url: "/"
       - title: "Screenings"
@@ -62,14 +62,10 @@ footer_items:
         url: "/"
       - title: "Tower Health Medical Group"
         url: "/"
-      - title: "Reading Hospital Foundation"
-        url: "/"
-      - title: "Volunteer"
-        url: "/"
-  - title: "Careers"
+  - title: "Support Tower Health"
     url: "/"
     below:
-      - title: "Open Positions"
+      - title: "Give"
         url: "/"
-      - title: "Benefits"
+      - title: "Volunteer"
         url: "/"
