--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@
 /docroot/themes/custom/*/svg/
 /docroot/themes/custom/*/imgs/
 /docroot/themes/custom/*/dist/
+/docroot/themes/custom/tower_health/components/js/drupal.js
+/docroot/themes/custom/tower_health/components/js/jquery.min.js
 
 # Ignore yarn error log
 /docroot/themes/custom/*/yarn-error.log
