--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/08-video/video~full.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/08-video/video~full.yml
@@ -1,5 +1,5 @@
 video_content:
-  "<iframe width="560" height="315" src="https://www.youtube.com/embed/qyJZSTqRP_U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>"
+  '<iframe width="560" height="315" src="https://www.youtube.com/embed/qyJZSTqRP_U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>'
 video_modifiers:
   1:
     full
