--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/rich-text/rich-text.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/rich-text/rich-text.yml
@@ -19,6 +19,6 @@ rich_text:
   -
     type: video
     video_content:
-      "<iframe width="560" height="315" src="https://www.youtube.com/embed/qyJZSTqRP_U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>"
+      '<iframe width="560" height="315" src="https://www.youtube.com/embed/qyJZSTqRP_U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>'
 
         
