--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/cta-list-banner.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/cta-list-banner.yml
@@ -1,23 +1,23 @@
-title_1: "Effortless,"
+title_1: "Innovative,"
 title_2: "Accessible"
 title_3: "Healthcare."
 subtitle: "Helping you connect with the care you need."
 links:
-  - text: "Make an Appointment"
+  - text: "Request an Appointment"
     url: "/"
     icon: "th-cal.svg"
   - text: "Find a Hospital or Location"
     url: "/"
     icon: "th-find-hospital.svg"
+  - text: "Conditions & Services"
+    url: "/"
+    icon: "th-medal.svg"
+  - text: "My TowerHealth"
+    url: "/"
+    icon: "th-my-tower.svg"
   - text: "Pay my Bill & Estimate Costs"
     url: "/"
     icon: "th-bill.svg"
   - text: "Urgent Care & Emergency Wait Times"
     url: "/"
     icon: "th-emergency-time.svg"
-  - text: "My TowerHealth"
-    url: "/"
-    icon: "th-my-tower.svg"
-  - text: "Sign-up for a Class or Event"
-    url: "/"
-    icon: "th-medal.svg"
