--- a/docroot/themes/custom/tower_health/components/_data/footer.yml
+++ b/docroot/themes/custom/tower_health/components/_data/footer.yml
@@ -3,18 +3,15 @@ footer_social:
     svg: "social-facebook.svg"
   - url: "#"
     svg: "social-twitter.svg"
-  - url: "/"
-    svg: "social-gplus.svg"
   - url: "#"
     svg: "social-linkedin.svg"
   - url: "#"
     svg: "social-youtube.svg"
   - url: "#"
     svg: "social-instagram.svg"
-  - url: "#"
-    svg: "social-pinterest.svg"
 footer_contact:
-  address: "420 S. Fifth Avenue, West Reading, PA 19611"
+  address_1: "420 S. Fifth Avenue"
+  address_2: "West Reading, PA 19611"
   phone: "484-628-8000"
 footer_details:
   - title: "Privacy Policy"
