--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/home/home.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/home/home.yml
@@ -72,9 +72,12 @@ cta_list:
     
 
 cta_banner:
-  title_1: "Need Help?"
-  title_2: "We're Here."
+  title_2: "Manage your Care, Anywhere."
+  subtitle: With the My Tower Heath patient portal, you can talk to your doctor, manage appointments and safely access your health information. Anytime. Even on your phone.
   img:
     src: "../../images/th-cta-image.jpg"
     alt: "Alternative Text"
   classes: "trust bottom-left"
+  button:
+    url: "#"
+    label: "My TowerHealth"
