Add working exposed proximity block to locations view. Allow facets to continue to work.

--- a/config/sites/default/core.entity_form_display.node.location.default.yml
+++ b/config/sites/default/core.entity_form_display.node.location.default.yml
@@ -20,6 +20,7 @@ dependencies:
     - node.type.location
     - workflows.workflow.default
   module:
+    - address
     - content_moderation
     - field_group
     - geofield
