--- a/config/sites/default/block.block.exposedformfind_a_locationfind_location.yml
+++ b/config/sites/default/block.block.exposedformfind_a_locationfind_location.yml
@@ -5,13 +5,14 @@ dependencies:
   config:
     - views.view.find_a_location
   module:
+    - system
     - views
   theme:
     - tower_health
 id: exposedformfind_a_locationfind_location
 theme: tower_health
-region: header
-weight: -3
+region: content
+weight: -9
 provider: null
 plugin: 'views_exposed_filter_block:find_a_location-find_location'
 settings:
@@ -20,4 +21,9 @@ settings:
   provider: views
   label_display: visible
   views_label: 'Find a location'
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    pages: "/find-a-location\r\n/find-a-location*"
+    negate: false
+    context_mapping: {  }
