--- a/config/sites/default/block.block.exposedformfind_a_providerfind_doctor.yml
+++ b/config/sites/default/block.block.exposedformfind_a_providerfind_doctor.yml
@@ -5,13 +5,14 @@ dependencies:
   config:
     - views.view.find_a_provider
   module:
+    - system
     - views
   theme:
     - tower_health
 id: exposedformfind_a_providerfind_doctor
 theme: tower_health
-region: header
-weight: -2
+region: content
+weight: -8
 provider: null
 plugin: 'views_exposed_filter_block:find_a_provider-find_doctor'
 settings:
@@ -19,5 +20,10 @@ settings:
   label: ''
   provider: views
   label_display: visible
-  views_label: 'Find a doctor'
-visibility: {  }
+  views_label: 'Find a provider'
+visibility:
+  request_path:
+    id: request_path
+    pages: "/find-a-provider\r\n/find-a-provider*"
+    negate: false
+    context_mapping: {  }
