--- a/config/sites/default/views.view.find_a_location.yml
+++ b/config/sites/default/views.view.find_a_location.yml
@@ -31,9 +31,9 @@ display:
       query:
         type: views_query
         options:
-          bypass_access: false
-          skip_access: false
-          preserve_facet_query_args: false
+          skip_access: 0
+          bypass_access: 0
+          preserve_facet_query_args: 0
       exposed_form:
         type: basic
         options:
@@ -262,10 +262,10 @@ display:
             group_items: {  }
           reduce_duplicates: false
           plugin_id: search_api_options
-        latlon:
+        location_latlon:
           id: location_latlon
           table: search_api_index_acquia_search_index
-          field: latlon
+          field: location_latlon
           relationship: none
           group_type: group
           admin_label: ''
@@ -275,17 +275,15 @@ display:
             distance:
               from: '-'
               to: '-'
-            min: ''
-            max: ''
           group: 1
           exposed: true
           expose:
-            operator_id: latlon_op
+            operator_id: location_latlon_op
             label: 'Location Geo » LatLong Pair'
             description: ''
             use_operator: false
-            operator: latlon_op
-            identifier: latlon
+            operator: location_latlon_op
+            identifier: location_latlon
             required: false
             remember: false
             multiple: false
@@ -293,9 +291,6 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
-            placeholder: ''
-            min_placeholder: ''
-            max_placeholder: ''
           is_grouped: false
           group_info:
             label: ''
@@ -336,6 +331,9 @@ display:
               geoip:
                 weight: '0'
                 checked: 0
+              geojsonfile:
+                weight: '0'
+                checked: 0
               geonames:
                 weight: '0'
                 checked: 0
@@ -343,15 +341,21 @@ display:
                 weight: '0'
                 checked: 0
               googlemaps:
+                checked: '1'
+                weight: '0'
+              googlemaps_business:
                 weight: '0'
                 checked: 0
-              googlemaps_business:
+              gpxfile:
                 weight: '0'
                 checked: 0
               hostip:
                 weight: '0'
                 checked: 0
               ipinfodb:
+                weight: '0'
+                checked: 0
+              kmlfile:
                 weight: '0'
                 checked: 0
               mapquest:
@@ -367,8 +371,8 @@ display:
                 weight: '0'
                 checked: 0
               openstreetmap:
-                checked: '1'
                 weight: '0'
+                checked: 0
               random:
                 weight: '0'
                 checked: 0
@@ -381,7 +385,7 @@ display:
             radius_type: select
             radius_options: "- -\r\n8.046 5 mi\r\n16.09 10 mi\r\n40.233 25 mi"
             radius_units: km
-          plugin_id: search_api_string
+          plugin_id: search_api_location
       sorts:
         search_api_relevance:
           id: search_api_relevance
@@ -402,7 +406,286 @@ display:
       relationships: {  }
       arguments: {  }
       display_extenders: {  }
-      use_ajax: true
+      use_ajax: false
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_interface'
+        - url
+        - url.query_args
+      tags: {  }
+  block_1:
+    display_plugin: block
+    id: block_1
+    display_title: Block
+    position: 2
+    display_options:
+      display_extenders: {  }
+      filters:
+        search_api_fulltext:
+          id: search_api_fulltext
+          table: search_api_index_towerhealth
+          field: search_api_fulltext
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: and
+          value: ''
+          group: 1
+          exposed: false
+          expose:
+            operator_id: search_api_fulltext_op
+            label: ''
+            description: ''
+            use_operator: false
+            operator: search_api_fulltext_op
+            identifier: find_location_search
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+            placeholder: ''
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          parse_mode: terms
+          min_length: null
+          fields:
+            - location_services_specialty_condition_name
+            - location_services_specialty_condition_synonym
+            - location_services_title
+            - rendered_item
+            - title
+          plugin_id: search_api_fulltext
+        search_api_datasource:
+          id: search_api_datasource
+          table: search_api_index_towerhealth
+          field: search_api_datasource
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value:
+            'entity:node': 'entity:node'
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          plugin_id: search_api_datasource
+        type:
+          id: type
+          table: search_api_index_towerhealth
+          field: type
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: or
+          value:
+            location: location
+          group: 1
+          exposed: false
+          expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          reduce_duplicates: false
+          plugin_id: search_api_options
+        location_latlon:
+          id: location_latlon
+          table: search_api_index_acquia_search_index
+          field: location_latlon
+          relationship: none
+          group_type: group
+          admin_label: ''
+          operator: '<'
+          value:
+            value: ''
+            distance:
+              from: '-'
+              to: '-'
+          group: 1
+          exposed: true
+          expose:
+            operator_id: location_latlon_op
+            label: 'Location Geo » LatLong Pair'
+            description: ''
+            use_operator: false
+            operator: location_latlon_op
+            identifier: location_latlon
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+              anonymous: '0'
+              administrator: '0'
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
+          plugin: geocode
+          plugin-geocode_map:
+            radius_border_color: ''
+            radius_border_weight: ''
+            radius_background_color: ''
+            radius_background_transparency: ''
+            marker_image: ''
+          plugin-raw:
+            radius_type: select
+            radius_options: "- -\r\n5 5 km\r\n10 10 km\r\n16.09 10 mi"
+            radius_units: km
+          plugin-geocode:
+            plugins:
+              arcgisonline:
+                weight: '0'
+                checked: 0
+              bingmaps:
+                weight: '0'
+                checked: 0
+              file:
+                weight: '0'
+                checked: 0
+              freegeoip:
+                weight: '0'
+                checked: 0
+              geoip:
+                weight: '0'
+                checked: 0
+              geojsonfile:
+                weight: '0'
+                checked: 0
+              geonames:
+                weight: '0'
+                checked: 0
+              geoplugin:
+                weight: '0'
+                checked: 0
+              googlemaps:
+                checked: '1'
+                weight: '0'
+              googlemaps_business:
+                weight: '0'
+                checked: 0
+              gpxfile:
+                weight: '0'
+                checked: 0
+              hostip:
+                weight: '0'
+                checked: 0
+              ipinfodb:
+                weight: '0'
+                checked: 0
+              kmlfile:
+                weight: '0'
+                checked: 0
+              mapquest:
+                weight: '0'
+                checked: 0
+              maxmind:
+                weight: '0'
+                checked: 0
+              nominatim:
+                weight: '0'
+                checked: 0
+              opencage:
+                weight: '0'
+                checked: 0
+              openstreetmap:
+                weight: '0'
+                checked: 0
+              random:
+                weight: '0'
+                checked: 0
+              tomtom:
+                weight: '0'
+                checked: 0
+              yandex:
+                weight: '0'
+                checked: 0
+            radius_type: select
+            radius_options: "- -\r\n8.046 5 mi\r\n16.09 10 mi\r\n40.233 25 mi"
+            radius_units: km
+          plugin_id: search_api_location
+      defaults:
+        filters: false
+        filter_groups: false
+        query: false
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
+      enabled: false
+      query:
+        type: views_query
+        options:
+          skip_access: 0
+          bypass_access: 0
+          preserve_facet_query_args: 1
     cache_metadata:
       max-age: -1
       contexts:
