--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
         "drupal-pattern-lab/unified-twig-extensions": "^0.1.0",
         "drupal/acquia_connector": "^1.16",
         "drupal/address": "^1.6",
-        "drupal/admin_toolbar": "^1.26",
+        "drupal/admin_toolbar": "^2.0",
         "drupal/auto_entitylabel": "^3.0@beta",
         "drupal/better_exposed_filters": "^3.0",
         "drupal/components": "^1.1",
@@ -71,6 +71,7 @@
         "drupal/search_api_location": "^1.0",
         "drupal/search_api_solr": "^1.1",
         "drupal/token": "^1.5",
+        "drupal/twig_tweak": "^2.4",
         "drupal/workbench": "^1.1",
         "drupal/workbench_tabs": "^1.3",
         "flow/jsonpath": "^0.4.0",
