form section adjustments

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/form-section/form-section.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/form-section/form-section.yml
@@ -9,10 +9,13 @@ section_items:
     width: oneFifth
     title: Middle Initial
     type: text
+    placeholder: A
+    optional: true
   - 
     width: twoFifth
     title: Last Name
     type: text
+    
   - 
     width: oneThird
     title: Gender
