--- a/config/sites/default/core.extension.yml
+++ b/config/sites/default/core.extension.yml
@@ -92,6 +92,7 @@ module:
   user: 0
   views_ui: 0
   workbench: 0
+  workbench_access: 0
   workbench_tabs: 0
   workflows: 0
   menu_link_content: 1
