--- a/config/sites/default/workflows.workflow.default.yml
+++ b/config/sites/default/workflows.workflow.default.yml
@@ -15,31 +15,72 @@ label: Default
 type: content_moderation
 type_settings:
   states:
+    archived:
+      published: false
+      default_revision: true
+      label: Archived
+      weight: 1
     draft:
       label: Draft
       published: false
       default_revision: false
-      weight: 0
+      weight: -2
+    needs_review:
+      published: false
+      default_revision: false
+      label: 'Needs Review'
+      weight: -1
     published:
       label: Published
       published: true
       default_revision: true
-      weight: 1
+      weight: 0
   transitions:
+    archived:
+      label: Archived
+      from:
+        - published
+      to: archived
+      weight: 0
+    back_to_draft:
+      label: 'Back to Draft'
+      from:
+        - needs_review
+      to: draft
+      weight: -2
     create_new_draft:
       label: 'Create New Draft'
       to: draft
-      weight: 0
+      weight: -4
       from:
         - draft
         - published
+    needs_review:
+      label: 'Ready for review'
+      from:
+        - draft
+      to: needs_review
+      weight: -3
     publish:
       label: Publish
       to: published
-      weight: 1
+      weight: -1
       from:
         - draft
+        - needs_review
         - published
+    restore_to_draft:
+      label: 'Restore to draft'
+      from:
+        - archived
+      to: draft
+      weight: 2
+    un_archive:
+      label: Restore
+      from:
+        - archived
+      to: published
+      weight: 1
   entity_types:
     node:
       - location
