--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/side-menu/side-menu.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/side-menu/side-menu.yml
@@ -1,11 +1,11 @@
-items:
+section_items:
   - title: "About"
     url: "/"
   - title: "Our Doctors"
     url: "/"
   - title: "Patients & Families"
     url: "/"
-    children:
+    below:
       - title: "Patient Services"
         url: "/"
       - title: "Patient Resources"
@@ -18,7 +18,7 @@ items:
         url: "/"
   - title: "Billing & Insurance"
     url: "/"
-    children:
+    below:
       - title: "Patient Services"
         url: "/"
       - title: "Patient Resources"
@@ -31,7 +31,7 @@ items:
         url: "/"
   - title: "Visitors"
     url: "/"
-    children:
+    below:
       - title: "Patient Services"
         url: "/"
       - title: "Patient Resources"
