--- a/config/sites/default/core.entity_view_display.node.page.default.yml
+++ b/config/sites/default/core.entity_view_display.node.page.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.page.field_media
+    - field.field.node.page.field_reference_access_control
     - field.field.node.page.field_text
     - node.type.page
   module:
@@ -17,13 +18,13 @@ bundle: page
 mode: default
 content:
   content_moderation_control:
-    weight: -20
+    weight: 0
+    region: content
     settings: {  }
     third_party_settings: {  }
-    region: content
   field_media:
     type: entity_reference_entity_view
-    weight: 102
+    weight: 2
     label: above
     settings:
       view_mode: default
@@ -31,14 +32,17 @@ content:
     third_party_settings: {  }
     region: content
   field_text:
-    weight: 103
+    weight: 3
     label: above
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
   links:
-    weight: 101
+    weight: 1
     region: content
+    settings: {  }
+    third_party_settings: {  }
 hidden:
+  field_reference_access_control: true
   search_api_excerpt: true
