--- a/config/sites/default/views.view.workbench_edited.yml
+++ b/config/sites/default/views.view.workbench_edited.yml
@@ -5,6 +5,7 @@ dependencies:
   module:
     - node
     - user
+    - workbench_access
 _core:
   default_config_hash: S6Q66WBoJh-XbhV3sOnfwifYJByE7tkQ1tMPcDeY3ZE
 id: workbench_edited
