--- a/config/sites/default/core.entity_view_display.node.page.teaser.yml
+++ b/config/sites/default/core.entity_view_display.node.page.teaser.yml
@@ -24,5 +24,6 @@ content:
     region: content
 hidden:
   field_media: true
+  field_reference_access_control: true
   field_text: true
   search_api_excerpt: true
