--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location.yml
@@ -22,3 +22,78 @@ hero:
     src: "../../images/th-hero-image.jpg"
     alt: "Alternative Text"
   classes: "growth top-left"
+link_list:
+  title: "Services we Offer"
+  items:
+    - text: "Cancer Care"
+      link: "/"
+    - text: "Weight Management"
+      link: "/"
+    - text: Heart & Vascular Care
+      link: "/"
+    - text: "Diagnostic Testing"
+      link: "/"
+    - text: "Joint & Bone Care"
+      link: "/"
+    - text: "Rehabilitation & Physical Therapy"
+      link: "/"
+    - text: "Emergency & Trauma"
+      link: "/"
+    - text: "Urgent Care"
+      link: "/"
+    - text: "Primary Care"
+      link: "/"
+    - text: "Women's Health"
+      link: "/"
+    - text: "Transplant"
+      link: "/"
+    - text: "Pediatrics"
+      link: "/"
+section_items:
+  - title: "About"
+    url: "/"
+  - title: "Our Doctors"
+    url: "/"
+  - title: "Patients & Families"
+    url: "/"
+    below:
+      - title: "Patient Services"
+        url: "/"
+      - title: "Patient Resources"
+        url: "/"
+      - title: "Patient & Family Advisory Councils"
+        url: "/"
+      - title: "Social Services"
+        url: "/"
+      - title: "Spiritual Care"
+        url: "/"
+  - title: "Billing & Insurance"
+    url: "/"
+    below:
+      - title: "Patient Services"
+        url: "/"
+      - title: "Patient Resources"
+        url: "/"
+      - title: "Patient & Family Advisory Councils"
+        url: "/"
+      - title: "Social Services"
+        url: "/"
+      - title: "Spiritual Care"
+        url: "/"
+  - title: "Visitors"
+    url: "/"
+    below:
+      - title: "Patient Services"
+        url: "/"
+      - title: "Patient Resources"
+        url: "/"
+      - title: "Patient & Family Advisory Councils"
+        url: "/"
+      - title: "Social Services"
+        url: "/"
+      - title: "Spiritual Care"
+        url: "/"
+  - title: "News"
+    url: "/"
+  - title: "Events & Classes"
+    url: "/"
