update header and footer data

--- a/docroot/themes/custom/tower_health/components/_data/footer.yml
+++ b/docroot/themes/custom/tower_health/components/_data/footer.yml
@@ -20,6 +20,8 @@ footer_details:
     href: "#"
   - title: "HIPAA Forms"
     href: "#"
+  - title: "Employees"
+    href: "#"
 footer_legal: "Copyright 2019 Tower Health. All rights reserved."
 footer_items:
   - title: "Patients & Visitors"
@@ -31,7 +33,7 @@ footer_items:
         url: "/"
       - title: "What to Expect"
         url: "/"
-      - title: "Pay a Bill"
+      - title: "Pay my Bill"
         url: "/"
       - title: "Price Estimator"
         url: "/"
@@ -44,6 +46,8 @@ footer_items:
         url: "/"
       - title: "Screenings"
         url: "/"
+      - title: "Support Groups"
+        url: "/"
       - title: "Articles"
         url: "/"
       - title: "Community Programs"
@@ -55,14 +59,16 @@ footer_items:
         url: "/"
       - title: "News"
         url: "/"
-      - title: "Quality & Safety"
+      - title: "Quality and Safety"
         url: "/"
       - title: "Tower Health Medical Group"
         url: "/"
-  - title: "Support Tower Health"
+  - title: "Giving & Volunteering"
     url: "/"
     below:
-      - title: "Give"
+      - title: "Reading Hospital Foundation"
+        url: "/"
+      - title: "Donate"
         url: "/"
       - title: "Volunteer"
         url: "/"
