--- a/docroot/themes/custom/tower_health/components/_data/header.yml
+++ b/docroot/themes/custom/tower_health/components/_data/header.yml
@@ -57,22 +57,6 @@ header_menu_items:
                   name: Carolyn O'connor, Md
                 - id: 17
                   name: Ann Reynolds Connor, Md
-      - title: "Menu Item 1 Sub 1"
-        url: "#"
-      - title: "Menu Item 1 Sub 2"
-        url: "#"
-      - title: "Menu Item 1 Sub 3"
-        url: "#"
-      - title: "Menu Item 1 Sub 4"
-        url: "#"
-      - title: "Menu Item 1 Sub 5"
-        url: "#"
-      - title: "Menu Item 1 Sub 6"
-        url: "#"
-      - title: "Menu Item 1 Sub 7"
-        url: "#"
-      - title: "Menu Item 1 Sub 8"
-        url: "#"
   - title: "Conditions & Services"
     url: "#"
     below:
@@ -102,21 +86,19 @@ header_menu_items:
                   name: Jennersville Hospital
                 - id: 27
                   name: Pottstown Hospital
-      - title: "Menu Item 3 Sub 1"
+      - title: "Cancer Care"
         url: "#"
-      - title: "Menu Item 3 Sub 2"
+      - title: "Heart & Vascular Care"
         url: "#"
-      - title: "Menu Item 3 Sub 3"
+      - title: "Orthopedics"
         url: "#"
-      - title: "Menu Item 3 Sub 4"
+      - title: "Neurology & Neurosurgery"
         url: "#"
-      - title: "Menu Item 3 Sub 5"
+      - title: "Pediatrics"
         url: "#"
-      - title: "Menu Item 3 Sub 6"
+      - title: "Primary Care"
         url: "#"
-      - title: "Menu Item 3 Sub 7"
-        url: "#"
-      - title: "Menu Item 3 Sub 8"
+      - title: "Women's Health"
         url: "#"
   - title: "Locations"
     url: "#"
@@ -147,21 +129,23 @@ header_menu_items:
                   name: Jennersville Hospital
                 - id: 27
                   name: Pottstown Hospital
-      - title: "Menu Item 2 Sub 1"
+      - title: "Reading Hospital"
         url: "#"
-      - title: "Menu Item 2 Sub 2"
+      - title: "Brandywine Hospital"
         url: "#"
-      - title: "Menu Item 2 Sub 3"
+      - title: "Chestnut Hill Hospital"
         url: "#"
-      - title: "Menu Item 2 Sub 4"
+      - title: "Jennersville Hospital"
         url: "#"
-      - title: "Menu Item 2 Sub 5"
+      - title: "Phoenixville Hospital"
         url: "#"
-      - title: "Menu Item 2 Sub 6"
+      - title: "Pottstown Hospital"
         url: "#"
-      - title: "Menu Item 2 Sub 7"
+      - title: "St. Christopher's Hospital for Children"
         url: "#"
-      - title: "Menu Item 2 Sub 8"
+      - title: "Emergency"
+        url: "#"
+      - title: "Urgent Care"
         url: "#"
   - title: "Medical Professionals"
     url: "#"
@@ -169,21 +153,17 @@ header_menu_items:
       1:
         secondary
     below:
-      - title: "Menu Item 4 Sub 1"
+      - title: "Tower Health Partners"
         url: "#"
-      - title: "Menu Item 4 Sub 2"
+      - title: "Physicians"
         url: "#"
-      - title: "Menu Item 4 Sub 3"
+      - title: "Nurses & Advanced Practitioners"
         url: "#"
-      - title: "Menu Item 4 Sub 4"
+      - title: "Fellows & Residents"
         url: "#"
-      - title: "Menu Item 4 Sub 5"
+      - title: "EMS Professionals"
         url: "#"
-      - title: "Menu Item 4 Sub 6"
-        url: "#"
-      - title: "Menu Item 4 Sub 7"
-        url: "#"
-      - title: "Menu Item 4 Sub 8"
+      - title: "Medical Affairs"
         url: "#"
   - title: "Academics"
     url: "#"
@@ -191,19 +171,19 @@ header_menu_items:
       1:
         secondary
     below:
-      - title: "Menu Item 5 Sub 1"
+      - title: "Academic Departments"
         url: "#"
-      - title: "Menu Item 5 Sub 2"
+      - title: "Residency Programs"
         url: "#"
-      - title: "Menu Item 5 Sub 3"
+      - title: "Fellowships Programs"
         url: "#"
-      - title: "Menu Item 5 Sub 4"
+      - title: "Continuing Medical Education"
         url: "#"
-      - title: "Menu Item 5 Sub 5"
+      - title: "Research"
         url: "#"
-      - title: "Menu Item 5 Sub 6"
+      - title: "Clinical Trials"
         url: "#"
-      - title: "Menu Item 5 Sub 7"
+      - title: "Reading Hospital School of Health Sciences"
         url: "#"
-      - title: "Menu Item 5 Sub 8"
+      - title: "Drexel University College of Medicine"
         url: "#"
