TH-284 on my way callout markup

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location.yml
@@ -142,6 +142,6 @@ image_callout:
     alt: "Alternative Text"
   title: "Tower Health and Drexel University to Assume Ownership of St. Christopher's Hospital for Children"
   text: "Tower Health and Drexel University have entered into an agreement to acquire St. Christopher's Hospital for Children, ensuring that the health care provider will continue its role as a vital resource for families in North Philadelphia and the region following its sale in bankruptcy court"
-  link:
-    url: "/"
-    text: "About the Acquisition"
+  links:
+    - url: "/"
+      text: "About the Acquisition"
