TH-284 renaming some things

--- a/docroot/themes/custom/tower_health/tower_health.libraries.yml
+++ b/docroot/themes/custom/tower_health/tower_health.libraries.yml
@@ -12,9 +12,9 @@ main-menu:
   dependencies:
     - core/drupal
 
-side-menu:
+section-menu:
   js:
-    dist/02-molecules/menus/side-menu/side-menu.js: {}
+    dist/02-molecules/menus/section-menu/section-menu.js: {}
   dependencies:
     - core/drupal
 
