TH-284 work on mobile menu

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/section-menu/section-menu.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/section-menu/section-menu.yml
@@ -23,6 +23,9 @@ section_items:
         url: "/"
       - title: "Patient Resources"
         url: "/"
+        below:
+          - title: "Test"
+            url: "/"
       - title: "Patient & Family Advisory Councils"
         url: "/"
       - title: "Social Services"
