--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.yml
@@ -18,3 +18,12 @@ img:
   src: "../../images/th-hero-image.jpg"
   alt: "Alternative Text"
 classes: "growth top-left"
+breadcrumb:
+  1:
+    url: "#"
+    text: "Home"
+  2:
+    url: "#"
+    text: "2nd Level"
+  3:
+    text: "3rd Level"
