--- a/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_locations.yml
+++ b/docroot/modules/custom/towerhealth_msow_migration/config/install/migrate_plus.migration.towerhealth_locations.yml
@@ -10,9 +10,10 @@ dependencies:
 source:
   plugin: 'csv'
   # Full path to the file.
-  path: 'modules/custom/towerhealth_msow_migration/data/tbl_Dir_Offices.csv'
+  path: 'public://directory/Find_Provider_Dir_Offices.txt'
   # Column delimiter. Comma (,) by default.
-  header_offset: 1
+  delimiter: '|'
+  header_row_count: 1
   ids: [location_id]
   # Here we identify the columns of interest in the source file.
   # Each numeric key is the 0-based index of the column.
