--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-teaser/provider-teaser.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-teaser/provider-teaser.yml
@@ -2,10 +2,11 @@ provider:
   img:
     src: "https://www.placeimg.com/500/500/any"
     alt: "Alternative Text"
-  button:
-    href: "/"
-    src: ""
-    alt: "Alternative Text"
+  classes: "growth bottom-right"
+  link:
+    url: "/"
+    text: "Request an Appointment"
+    icon: "th-cal.svg"
   details:
     name: "Donald E. Roland, MD, DMD"
     specialties: "Oral and Maxillofacial Surgery"
