--- a/.the-build/build.yml
+++ b/.the-build/build.yml
@@ -65,6 +65,9 @@ styleguide:
 theme:
   root: "${drupal.root}/themes/custom/tower_health"
 
+migrate_directory:
+  root: "${drupal.root}/sites/default/files/directory"
+
 # Configuration for using PHP Mess Detector to check for general PHP best practices,
 # unused variables, and to agnalyze complexity.
 #
