--- a/config/sites/default/migrate_plus.migration.towerhealth_locations.yml
+++ b/config/sites/default/migrate_plus.migration.towerhealth_locations.yml
@@ -16,8 +16,9 @@ migration_group: null
 label: 'Import tower health location content'
 source:
   plugin: csv
-  path: modules/custom/towerhealth_msow_migration/data/tbl_Dir_Offices.csv
-  header_offset: 1
+  path: 'public://directory/Find_Provider_Dir_Offices.txt'
+  delimiter: '|'
+  header_row_count: 1
   ids:
     - location_id
   track_changes: true
