--- a/config/sites/default/migrate_plus.migration.towerhealth_providers.yml
+++ b/config/sites/default/migrate_plus.migration.towerhealth_providers.yml
@@ -16,41 +16,47 @@ migration_group: null
 label: 'Import tower health provider content'
 source:
   plugin: csv
-  path: modules/custom/towerhealth_msow_migration/data/tbl_Dir_Practitioner.csv
-  delimiter: ','
-  enclosure: '"'
+  path: 'public://directory/Find_Provider_Dir_Practitioner.txt'
+  delimiter: '|'
   header_row_count: 1
+  enclosure: '"'
   ids:
     - practioner_id
   track_changes: true
   fields:
-    0:
+    -
       name: practioner_id
       label: 'Practioner ID'
-    1:
+    -
       name: last_name
       label: 'Last name'
-    3:
+    -
       name: first_name
       label: 'First name'
-    4:
+    -
       name: middle_name
       label: 'Middle name'
-    5:
+    -
       name: professional_title
       label: 'Professional Title'
-    6:
+    -
       name: gender
       label: Gender
-    7:
+    -
       name: app
       label: APP
-    8:
+    -
       name: employment_status
       label: 'Employment Status'
-    9:
+    -
       name: npi_id
       label: 'NPI ID'
+    -
+      name: epic_id
+      label: Epic_Provider_Number
+    -
+      name: open_scheduling
+      label: 'Open scheduling'
 process:
   field_profile_practid: practioner_id
   field_profile_first_name: first_name
@@ -75,11 +81,11 @@ process:
         - app
         - employment_status
       map:
-        'FALSE':
+        'False':
           Employed: tower_health_employed
           Contracted: contracted
           '': independent
-        'TRUE':
+        'True':
           Employed: app_employed
           Contracted: contracted
           '': independent
