TH-283 right side icon button variation

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listing-cta/listing-cta.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listing-cta/listing-cta.yml
@@ -3,3 +3,5 @@ text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet d
 link:
   url: "/"
   text: "484-628-HELP"
+  icon: "th-cal.svg"
+  class: "right"
