--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-location.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-location.yml
@@ -10,6 +10,10 @@ header:
       text: "3rd Level"
   title: Find a Location
   class: "listing"
+search:
+  label: "Search Locations"
+  placeholder: "Search by Name"
+  button: "Search Locations"
 providers:
   - img:
       src: "https://www.placeimg.com/500/500/any"
