--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-location.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-location.yml
@@ -14,46 +14,58 @@ search:
   label: "Search Locations"
   placeholder: "Search by Name"
   button: "Search Locations"
-providers:
+filters:
+  - label: "Zip Code"
+    placeholder: "00000"
+    type: "text"
+  - label: "Distance"
+    type: "select"
+locations:
   - img:
       src: "https://www.placeimg.com/500/500/any"
       alt: "Alternative Text"
-    classes: "growth bottom-right"
+    label: "Reading Hosptial"
     link:
       url: "/"
-      text: "Request an Appointment"
-      icon: "th-cal.svg"
+      text: "Directions"
+      icon: "th-find-hospital.svg"
     details:
-      address_1: "420 S. Fifth Avenue"
-      address_2: "West Reading, PA 19611"
+      name: "McGlinn Cancer Institute"
+      address1: "420 S. Fifth Avenue"
+      address2: "West Reading, PA 19611"
+      phone: "484-555-5555"
+      fax: "484-555-5556"
+    type: "location"
   - img:
       src: "https://www.placeimg.com/500/500/any"
       alt: "Alternative Text"
-    classes: "growth bottom-right"
+    label: "Reading Hosptial"
     link:
       url: "/"
-      text: "Request an Appointment"
-      icon: "th-cal.svg"
+      text: "Directions"
+      icon: "th-find-hospital.svg"
     details:
-      name: "Amir A. Abdel-Wahab, MD, FAAP"
-      specialties: "Pediatrics"
-      focus: "Child Development, Preventative Medicine"
-      location: "Wyomissing, PA"
-      language: "English"
+      name: "McGlinn Cancer Institute"
+      address1: "420 S. Fifth Avenue"
+      address2: "West Reading, PA 19611"
+      phone: "484-555-5555"
+      fax: "484-555-5556"
+    type: "location"
   - img:
       src: "https://www.placeimg.com/500/500/any"
       alt: "Alternative Text"
-    classes: "growth bottom-right"
+    label: "Reading Hospital"
     link:
       url: "/"
-      text: "Request an Appointment"
-      icon: "th-cal.svg"
+      text: "Directions"
+      icon: "th-find-hospital.svg"
     details:
-      name: "Monique Lisa Abner, MD"
-      specialties: "Plastic Surgery"
-      focus: "Wound healing, Hyperbaric Medicine"
-      location: "Wyomissing, PA"
-      language: "English"
+      name: "McGlinn Cancer Institute"
+      address1: "420 S. Fifth Avenue"
+      address2: "West Reading, PA 19611"
+      phone: "484-555-5555"
+      fax: "484-555-5556"
+    type: "location"
 cta:
   title: "Need Help? We're Here."
   text: "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sit amet dolor dapibus, mollis diam id, euismod urna. Nulla finibus lorem in massa semper, at ultrices qam interdum. Praesent nec ante id lorem cursus."
