TH-284 updating location hero

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.yml
@@ -6,6 +6,7 @@ directions:
   link: "/"
   icon: "th-find-hospital.svg"
   text: "Directions"
+  variation: "small"
 phone:
   number: "484-628-8000"
   label: "484-628-8000"
